Styles/base.css
/* 27F5B0 sea green
27D3F5 cyan
276CF5 aqua blue
F5276C dark salmon
F5B027 mustard yellow

*/


* {
    font-family: 'Lucida Sans', 'Lucida Sans Regular';
    box-sizing: border-box;
}

/* -------- HEADER ----------> */

header {
    display: grid;
    grid-template-columns: 24px auto 44px;
    padding: 5px 0px 5px 10px;
    align-items: end;
    border-bottom: solid 1px #ddd;
    column-gap: 8px;
}

header img {
    display: block;
    width: 100%;
    height: auto;
    padding-bottom: 2px;

}

header span {
    font-size: 1.2rem;
    color: #F5B027;
}

/*-------- HAMBURGER MENU --------*/

.hamburger {
    background: none;
    border: none;
    cursor: pointer;
    color: #30405B;
    padding: 5px 0px 5px 10px;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

.hamburger::before {
    content: "\2630";

}

.hamburger.show::before {
    content: "\00D7";


}


/* -------- NAVIGATION ----------> */
.navigation {
    display: none;
}

.navigation.show {
    display: block;
    background-color: #30405B;
    color: white;
}

.navigation ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.navigation a {
    display: block;
    padding: .8rem 10px;
    color: black;
    text-decoration: none;
    border-bottom: solid 1px #ddd;


}

/* Makes current navigation item stand out */
.navigation li.current {
    background-color: #ddd;
    color: white;
}

.navigation a:hover {
    background-color: #30405B;
    color: white;
}

h1 {
    margin-left: 10px;
    color: #30405B;
}

/* ------------MAIN------------- */


#aboutMe {
    margin: 0 10px;
    border: solid 2px rgb(202, 197, 197);
    border-radius: 7px;
    text-align: center;
}

#aboutMe h2 {
    background-color: #F5B027;
    color: #273349;
    border-radius: 2px;
    margin-top: 0;
}




#studentPhoto {
    margin: 0 10px;
    border: solid 2px rgb(202, 197, 197);
    border-radius: 7px;
    text-align: center;

}

#studentPhoto h2 {
    background-color: #F5B027;
    color: #273349;
    border-radius: 2px;
    margin-top: 0;
}

#studentPhoto img {
    width: auto;
    height: auto;
    border-radius: 7px;
    justify-content: center;
    align-items: center;
}




#courses {
    margin: 10px;
    grid-column: 1/4;
    grid-row: 3/4;
}

#courses h2 {
    background-color: #F5B027;
    color: #273349;
    border-radius: 2px;
}

/* -------- Course Buttons-------- */

#btnContainer {
    display: flex;
    justify-content: center;
    column-gap: 8px;
    margin: 15px 10px;

}

.btn {
    background-color: #30405B;
    color: white;
    border: none;
    border-radius: 7px;
    padding: 10px 20px;
    cursor: pointer;
}

.btn:hover {
    background-color: white;
    color: #30405B;
}



/*-------- Course Cards-------- */

#container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 10px;
}

.card {
    background-color: #F5B027;
    border: solid 1px #ccc;
    border-radius: 7px;
    padding: 5px;
}

.card.completed {
    background-color: #27D3F5;
}

#credits {
    text-align: center;
}




/* ---------FOOOTER--------------- */
footer {
    background-color: #eee;
    padding: 1rem 10px;
    text-align: center;

}

.social {
    display: flex;
    justify-content: center;
    column-gap: 8px;
}

.social a {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 44px;
    height: 44px;
    border: solid 1px #ccc;
    border-radius: 7px;

}

.social img {
    width: 22px;
    height: 22px;
}

.social a:hover {
    background-color: #ddd;
    color: white;
}

